apps/docs/pages/contracts/api/v1/fragments/universal-resolver.mdx
---
title: Universal Resolver
description: Focused, tree-shakable ABI fragments for Universal Resolver.
---

import SharedSnippet0 from "../../../../../shared/contracts/entrypoint.mdx";
import SharedSnippet1 from "../../../../../shared/contracts/fragment.mdx";
import SharedSnippet2 from "../../../../../shared/contracts/type-safety.mdx";

# Universal Resolver

Focused, tree-shakable ABI fragments for Universal Resolver.

## Import

```ts
import {
  universalResolverV1ResolveAbi,
  universalResolverV1ReverseAbi,
} from "@ensforge/contracts/v1";
```

## Usage

:::code-group

```ts [contract.ts]
import { getContract } from "viem";

const contract = getContract({
  address,
  abi: universalResolverV1ResolveAbi,
  client: publicClient,
});
```

```ts [client.ts]
// [!include ~/snippets/contracts/client.ts]
```

:::

## Exports

| Export                          | Description                                             |
| ------------------------------- | ------------------------------------------------------- |
| `universalResolverV1ResolveAbi` | Immutable ABI value with viem-compatible literal types. |
| `universalResolverV1ReverseAbi` | Immutable ABI value with viem-compatible literal types. |

## Entrypoint

`@ensforge/contracts/v1`

<SharedSnippet0 />

<SharedSnippet1 />

## Type Safety

<SharedSnippet2 />

```ts
type Export = typeof universalResolverV1ResolveAbi;
```

## Compose fragments

```ts
const abi = [...universalResolverV1ResolveAbi, ...anotherFragment] as const;
```

Keep the composed value local to the call site so bundlers can remove unrelated contract surfaces.
